# emaddehnavi

./: README.md
Mastering-CSS-Series/Box-Model/: index.html  package-lock.json  package.json  styles.css
localstack-aws-example/backend/: .gitignore  pyproject.toml
localstack-aws-example/backend/backend/: __init__.py  main.py
localstack-aws-example/frontend/: package.json  pnpm-lock.yaml
localstack-aws-example/frontend/src/: root.tsx
localstack-aws-example/frontend/src/routes/: index.tsx
