[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Emad Dehnavi <dehnavi@gmx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
flask = "^3.1.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.script]
start = "backend.main:start"
