[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Emad Dehnavi <dehnavi@gmx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
flask = "^3.1.0"
ipykernel = "^6.29.5"
awscli = "^1.36.9"
boto3 = "^1.35.68"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend.main:start"
watermelon = "backend.main:watermelon"
contest = "backend.contest:main"
